Obrada navigacije na Frontend-u, prikaz kategorija i podkategorija i dohvatanje i obrada proizvoda koji ce se prikazivati na aplikaciji

--- a/WebShop-Front/src/styles.css
+++ b/WebShop-Front/src/styles.css
@@ -1,1 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+    font-family: 'Noto Sans JP';
+}
+.bg-logo {
+    background-color: #0741AD !important;
+}
+.text-logo {
+    color: #0741AD !important;
+}
