--- a/WebShop-Front/src/app/pages/sub-categories-page/sub-categories-page.component.html
+++ b/WebShop-Front/src/app/pages/sub-categories-page/sub-categories-page.component.html
@@ -1,12 +1,16 @@
 <div class="container">
     <div class="my-3">
         <small class="text-secondary">
-            <span class="px-3">Početna</span> /
-            <span class="font-weight-bold px-3 text-logo">{{categoryName}}</span>
+            <a [routerLink]="['/home']" class="px-3 text-secondary text-decoration-none">Početna</a> 
+            
+            <i class="fas fa-caret-right"></i>
+
+            <a [routerLink]="['/', categoryName | lowercase | replace:' ':'-']"
+                class="font-weight-bold px-3 text-logo text-decoration-none">{{categoryName}}</a>
         </small>
     </div>
     <div class="row my-4 px-3 px-md-0">
-        <a href="#" class="text-dark text-decoration-none col-md-3 mx-md-2 my-2 border px-5 py-3 text-center"
+        <a class="text-dark text-decoration-none col-md-3 mx-md-2 my-2 border px-5 py-3 text-center"
             *ngFor="let subCategory of subCategories"
             [routerLink]="[subCategory.subCategoryName | lowercase | replace:' ':'-']">
             {{subCategory.subCategoryName}} <i class="fas fa-angle-right"></i>
