--- a/WebShop-Front/src/app/pages/sub-categories-page/sub-categories-page.component.html
+++ b/WebShop-Front/src/app/pages/sub-categories-page/sub-categories-page.component.html
@@ -1,12 +1,12 @@
 <div class="container">
     <div class="my-3">
         <small class="text-secondary">
-            <a [routerLink]="['/home']" class="px-3 text-secondary text-decoration-none">Početna</a> 
+            <a [routerLink]="['/home']" class="pr-3 text-secondary text-decoration-none">Početna</a> 
             
             <i class="fas fa-caret-right"></i>
 
             <a [routerLink]="['/', categoryName | lowercase | replace:' ':'-']"
-                class="font-weight-bold px-3 text-logo text-decoration-none">{{categoryName}}</a>
+                class="font-weight-bold px-3 text-logo text-decoration-none">{{categoryName | titlecase}}</a>
         </small>
     </div>
     <div class="row my-4 px-3 px-md-0">
