--- a/WebShop-Front/src/app/navbar/navbar.component.html
+++ b/WebShop-Front/src/app/navbar/navbar.component.html
@@ -43,7 +43,7 @@
         </div>
     </div>
 </div>
-<nav class="navbar navbar-expand-md navbar-dark bg-logo">
+<nav class="navbar navbar-expand-md navbar-dark bg-logo " (scroll)="onWindowScroll($event);">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
