Izmene na strani za prikaz proizvoda. Linkovanje logo-a da vodi na pocetnu stranu

--- a/WebShop-Front/src/app/pages/products-page/products-page.component.html
+++ b/WebShop-Front/src/app/pages/products-page/products-page.component.html
@@ -18,7 +18,7 @@
 
     <div class="my-4">
         <div class="row">
-            <div class="col-md-3 mb-3 mb-md-0 border-right">
+            <div id="filter" (window:resize)="onResize($event)" class="col-md-3 mb-3 mb-md-0 border-right">
                 <h4 class="font-weight-bold">Filteri</h4>
                 <p class="border-bottom" data-target="#filter" data-toggle="collapse" role="button">Proizvođači<span
                         class="float-right"><i class="fas fa-angle-down"></i></span></p>
