--- a/WebShop-Front/src/app/pages/error-page/error-page.component.html
+++ b/WebShop-Front/src/app/pages/error-page/error-page.component.html
@@ -1,3 +1,6 @@
-<div class="container">
-    <h1>404!</h1>
+<div class="container text-center">
+    <div class="my-5 text-red">
+        <p class="font-weight-bold not-found my-0">404</p>
+        <p class="not-found-text my-0">Page not found</p>
+    </div>
 </div>
