--- a/WebShop-Front/src/app/pages/product-detail-page/product-detail/product-detail.component.html
+++ b/WebShop-Front/src/app/pages/product-detail-page/product-detail/product-detail.component.html
@@ -52,7 +52,7 @@
             <h3 class="text-logo font-weight-bold">{{product.priceWithDiscount | currency:'RSD '}}</h3>
         </div>
 
-        <div class="row mt-5">
+        <div class="row mt-5" *ngIf="!userService.isLogin || (userService.isLogin && userService.user.role.roleName == 'User')">
             <div class="col-3 col-lg-2 mb-3 mb-sm-0">
                 <input type="number" min="1" max="{{product.stock}}" value="1" class="form-control">
             </div>
