--- a/WebShop-Front/src/app/shared/navbar/navbar.component.html
+++ b/WebShop-Front/src/app/shared/navbar/navbar.component.html
@@ -1,7 +1,8 @@
 <div class="d-none d-md-block">
     <div class="row bg-light m-0">
         <div class="col-sm-3 text-center align-self-center">
-            <img (click)="onClickLogo()" role="button" src="../../../assets/images/logo.png" alt="Logo" class="img-fluid" width="100" height="100">
+            <img (click)="onClickLogo()" role="button" src="../../../assets/images/logo.png" alt="Logo"
+                class="img-fluid" width="100" height="100">
         </div>
         <div class="col-sm-6 text-center align-self-center py-3">
             <div class="input-group px-5">
@@ -14,20 +15,22 @@
             </div>
         </div>
         <div class="col-sm-3 text-center align-self-center py-3">
+
             <div *ngIf="userService.isLogin then thenBlock else elseBlock"></div>
             <ng-template #thenBlock>
                 <div class="dropdown d-inline-block">
                     <button class="btn bg-logo text-light mx-2 py-2 px-3" type="button" id="dropdownUserButton">
-                        <i class="far fa-user"></i>
+                        <i class="far fa-user"></i><sup><small><i
+                                    class="fas fa-circle text-success ml-1"></i></small></sup>
                     </button>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownUserButton">
-                        <p class="dropdown-item d-inline">Ime Prezime</p>
+                        <p class="dropdown-item d-inline">
+                            {{userService.user.firstname}} {{userService.user.lastname}}
+                        </p>
                         <a class="dropdown-item" href="#">Moj nalog</a>
-                        <a class="dropdown-item" href="#">Odjavi se</a>
+                        <span class="dropdown-item" role="button" (click)="onClickLogout()">Odjavi se</span>
                     </div>
                 </div>
-                <button type="button" class="btn bg-logo text-light mx-2 py-2 px-3" data-toggle="tooltip"
-                    data-placement="top" title="Moja korpa"><i class="fas fa-shopping-cart"></i></button>
             </ng-template>
             <ng-template #elseBlock>
                 <div class="dropdown d-inline-block">
@@ -35,11 +38,19 @@
                         <i class="far fa-user"></i>
                     </button>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownUserButton">
-                        <a class="dropdown-item" href="#">Prijavi se</a>
+                        <a class="dropdown-item" [routerLink]="['/login']">Prijavi se</a>
                         <a class="dropdown-item" href="#">Registruj se</a>
                     </div>
                 </div>
             </ng-template>
+
+            <button type="button" class="btn bg-logo text-light mx-2 py-2 px-3" data-toggle="tooltip"
+                data-placement="top" title="Vaša korpa" *ngIf='!userService.isLogin 
+                    || (userService.isLogin && userService.user.role.roleName == "User")'>
+                <i class="fas fa-shopping-cart"></i>
+                <sup><span class="badge bg-red text-light ml-1">0</span></sup>
+            </button>
+
         </div>
     </div>
 </div>
@@ -49,6 +60,7 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="d-inline-block d-md-none">
+
         <div *ngIf="userService.isLogin then thenBlock else elseBlock"></div>
         <ng-template #thenBlock>
             <div class="dropdown d-inline-block">
@@ -66,22 +78,26 @@
         </ng-template>
         <ng-template #elseBlock>
             <div class="dropdown d-inline-block">
-                <button class="btn bg-logo text-light mx-2 py-2 px-3" type="button" id="dropdownUserButton">
-                    <i class="far fa-user"></i>
-                </button>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownUserButton">
                     <a class="dropdown-item" href="#">Prijavi se</a>
                     <a class="dropdown-item" href="#">Registruj se</a>
                 </div>
             </div>
         </ng-template>
-        <img (click)="onClickLogo()" role="button" src="../../../assets/images/logo-light.png" alt="Logo" class="img-fluid" width="60" height="60">
+
+        <button type="button" class="btn bg-logo text-light mx-2 py-2 px-3" data-toggle="tooltip" data-placement="top"
+            title="Vaša korpa" *ngIf='!userService.isLogin || (userService.isLogin && userService.user.role.roleName == "User")'>
+            <i class="fas fa-shopping-cart"></i>
+            <sup><span class="badge bg-red text-light ml-1">0</span></sup>
+        </button>
+
+        <img (click)="onClickLogo()" role="button" src="../../../assets/images/logo-light.png" alt="Logo"
+            class="img-fluid" width="60" height="60">
     </div>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav pl-md-5">
             <li class="nav-item px-2">
-                <a class="nav-link text-light"
-                    [routerLink]="['/']">Početna</a>
+                <a class="nav-link text-light" [routerLink]="['/']">Početna</a>
             </li>
         </ul>
         <ul class="navbar-nav" *ngFor="let category of categories">
