Izmene na komponentama. Dodavanje spinner elementa dok se ne ucitaju svi trazeni podaci sa servera

--- a/WebShop-Front/src/app/pages/product-detail-page/product-detail-page.component.html
+++ b/WebShop-Front/src/app/pages/product-detail-page/product-detail-page.component.html
@@ -21,5 +21,6 @@
         </small>
     </div>
     <h5 class="my-4">{{product.description}}</h5>
-    <app-product-detail [product]="product"></app-product-detail>
+
+    <app-product-detail *ngIf="product" [product]="product"></app-product-detail>
 </div>
