--- a/WebShop-Front/src/app/pages/sub-categories-page/sub-categories-page.component.html
+++ b/WebShop-Front/src/app/pages/sub-categories-page/sub-categories-page.component.html
@@ -1,14 +1,19 @@
 <div class="container">
     <div class="my-3">
         <small class="text-secondary">
-            <a [routerLink]="['/home']" class="pr-3 text-secondary text-decoration-none">Početna</a> 
-            
+            <a [routerLink]="['/home']" class="pr-3 text-secondary text-decoration-none">Početna</a>
+
             <i class="fas fa-caret-right"></i>
 
             <a [routerLink]="['/', categoryName | lowercase | replace:' ':'-']"
                 class="font-weight-bold px-3 text-logo text-decoration-none">{{categoryName | titlecase}}</a>
         </small>
     </div>
+
+    <div class="spinner-border text-red" *ngIf="!subCategories" role="status">
+        <span class="sr-only">Loading...</span>
+    </div>
+    
     <div class="row my-4 px-3 px-md-0" *ngIf="subCategories && subCategories.length > 0">
         <a class="text-dark text-decoration-none col-md-3 mx-md-2 my-2 border px-5 py-3 text-center"
             *ngFor="let subCategory of subCategories"
