--- a/WebShop-Front/src/app/pages/product-detail-page/product-detail/product-detail.component.html
+++ b/WebShop-Front/src/app/pages/product-detail-page/product-detail/product-detail.component.html
@@ -56,7 +56,7 @@
             <div class="col-3 col-lg-2 mb-3 mb-sm-0">
                 <input type="number" min="1" max="{{product.stock}}" value="1" class="form-control">
             </div>
-            <div class="col-9 col-md-6 col-lg-4 col-lg-4">
+            <div class="col-9 col-md-7 col-lg-5">
                 <button type="button" class="btn bg-logo text-light btn-block py-2">Dodaj u korpu <i class="fas fa-shopping-cart"></i></button>
             </div>
         </div>
