--- a/WebShop-Front/src/app/pages/products-page/products-page.component.html
+++ b/WebShop-Front/src/app/pages/products-page/products-page.component.html
@@ -12,11 +12,16 @@
             <i class="fas fa-caret-right"></i>
 
             <a [routerLink]="['/', categoryName | lowercase | replace:' ':'-', subCategoryName | lowercase | replace:' ':'-']"
-                [queryParams]="{page: 1}" class="font-weight-bold px-3 text-logo text-decoration-none">{{subCategoryName | titlecase}}</a>
+                [queryParams]="{page: 1}"
+                class="font-weight-bold px-3 text-logo text-decoration-none">{{subCategoryName | titlecase}}</a>
         </small>
     </div>
 
-    <div class="my-4">
+    <div class="spinner-border text-red" *ngIf="!producers || !products" role="status">
+        <span class="sr-only">Loading...</span>
+    </div>
+
+    <div class="my-4" *ngIf="producers && products">
         <div class="row">
             <div id="filter" (window:resize)="onResize($event)" class="col-md-3 mb-3 mb-md-0 border-right">
                 <h4 class="font-weight-bold">Filteri</h4>
@@ -24,19 +29,20 @@
                         class="float-right"><i class="fas fa-angle-down"></i></span></p>
                 <div id="filter" class="collapse">
 
-                    <app-filters class="form-check" (onClick)="onClickProducer($event)" *ngFor="let producer of producers" [producer]="producer">
+                    <app-filters class="form-check" (onClick)="onClickProducer($event)"
+                        *ngFor="let producer of producers" [producer]="producer">
                     </app-filters>
-                    
+
                 </div>
             </div>
             <div class="col-md-9">
                 <h4 class="font-weight-bold">{{subCategoryName | titlecase}}</h4>
 
-                <div class="alert alert-info" *ngIf="products && products.length === 0">
+                <div class="alert alert-info" *ngIf="products.length === 0">
                     Trenutno nema proizovda za izabranu kategoriju!
                 </div>
 
-                <div class="container-fluid" *ngIf="products && products.length > 0">
+                <div class="container-fluid" *ngIf="products.length > 0">
                     <div class="row bg-light py-2 my-3">
                         <div class="offset-md-8 col-md-4 py-1">
                             <select #sort (change)='onSortSelected(sort.value)'
@@ -51,9 +57,8 @@
                     <div class="row my-3">
 
                         <app-product class="col-sm-6 col-lg-4 mb-3" *ngFor="let product of products"
-                            [categoryName]="categoryName"  
-                            [product]="product"
-                            [subCategoryName]="subCategoryName"></app-product>
+                            [categoryName]="categoryName" [product]="product" [subCategoryName]="subCategoryName">
+                        </app-product>
 
                     </div>
                     <div class="row bg-light py-2 mt-3">
@@ -61,8 +66,9 @@
 
                             <ul class="pagination pagination-md m-0">
                                 <li class="page-item selected" *ngFor="let page of pages">
-                                    <button [ngClass]="{'bg-red': page == currentPage}" class="page-link bg-logo text-light"
-                                        id="btn_{{page}}" (click)="changePage(page)">{{page}}</button>
+                                    <button [ngClass]="{'bg-red': page == currentPage}"
+                                        class="page-link bg-logo text-light" id="btn_{{page}}"
+                                        (click)="changePage(page)">{{page}}</button>
                                 </li>
                             </ul>
 
