--- a/WebShop-Front/src/app/shared/navbar/navbar.component.html
+++ b/WebShop-Front/src/app/shared/navbar/navbar.component.html
@@ -39,7 +39,7 @@
                     </button>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownUserButton">
                         <a class="dropdown-item" [routerLink]="['/login']">Prijavi se</a>
-                        <a class="dropdown-item" href="#">Registruj se</a>
+                        <a class="dropdown-item" [routerLink]="['/register']">Registruj se</a>
                     </div>
                 </div>
             </ng-template>
