--- a/WebShop-Front/src/app/shared/navbar/navbar.component.html
+++ b/WebShop-Front/src/app/shared/navbar/navbar.component.html
@@ -44,7 +44,7 @@
                 </div>
             </ng-template>
 
-            <button type="button" class="btn bg-logo text-light mx-2 py-2 px-3" data-toggle="tooltip"
+            <button type="button" class="btn bg-logo text-light mx-2 py-2 px-3" (click)='onClickCart()' data-toggle="tooltip"
                 data-placement="top" title="Vaša korpa" *ngIf='!userService.isLogin 
                     || (userService.isLogin && userService.user.role.roleName == "User")'>
                 <i class="fas fa-shopping-cart"></i>
@@ -85,7 +85,7 @@
             </div>
         </ng-template>
 
-        <button type="button" class="btn bg-logo text-light mx-2 py-2 px-3" data-toggle="tooltip" data-placement="top"
+        <button type="button" class="btn bg-logo text-light mx-2 py-2 px-3" (click)='onClickCart()' data-toggle="tooltip" data-placement="top"
             title="Vaša korpa" *ngIf='!userService.isLogin || (userService.isLogin && userService.user.role.roleName == "User")'>
             <i class="fas fa-shopping-cart"></i>
             <sup><span class="badge bg-red text-light ml-1">{{shopCartService.products.length}}</span></sup>
