--- a/WebShop-Front/src/app/pages/home-page/home-page.component.html
+++ b/WebShop-Front/src/app/pages/home-page/home-page.component.html
@@ -1,67 +1,23 @@
-<div class="container">
-    <h1>Home page loading...</h1>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, corrupti? Veritatis itaque quidem excepturi asperiores impedit dolorum distinctio quos facere non, alias at laudantium! Perspiciatis sunt maxime inventore nam quae.
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum quisquam ad repellendus. Voluptas iste fugit minima rem aspernatur, corrupti esse tempora quis magni nulla incidunt accusantium ipsa nemo quaerat laborum?
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus iste provident officiis aut fuga perspiciatis velit eveniet temporibus accusamus, eius ullam in sed aperiam, delectus, animi eum ipsum necessitatibus incidunt.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus ipsa possimus labore deleniti expedita cum ipsum vero, accusamus sunt cumque consectetur nemo reiciendis. Ipsam, ipsum! Veniam, exercitationem? Perferendis, non recusandae.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat culpa cumque accusantium repellendus esse inventore neque, eligendi eaque voluptates similique quidem cupiditate consectetur maiores animi perspiciatis, maxime deserunt quo labore.
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro quibusdam aspernatur culpa? Vero officia fuga sapiente aperiam voluptate dolorem autem molestiae quibusdam est sint nulla fugiat nostrum, non, porro aliquid?
-    </p>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, corrupti? Veritatis itaque quidem excepturi asperiores impedit dolorum distinctio quos facere non, alias at laudantium! Perspiciatis sunt maxime inventore nam quae.
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum quisquam ad repellendus. Voluptas iste fugit minima rem aspernatur, corrupti esse tempora quis magni nulla incidunt accusantium ipsa nemo quaerat laborum?
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus iste provident officiis aut fuga perspiciatis velit eveniet temporibus accusamus, eius ullam in sed aperiam, delectus, animi eum ipsum necessitatibus incidunt.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus ipsa possimus labore deleniti expedita cum ipsum vero, accusamus sunt cumque consectetur nemo reiciendis. Ipsam, ipsum! Veniam, exercitationem? Perferendis, non recusandae.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat culpa cumque accusantium repellendus esse inventore neque, eligendi eaque voluptates similique quidem cupiditate consectetur maiores animi perspiciatis, maxime deserunt quo labore.
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro quibusdam aspernatur culpa? Vero officia fuga sapiente aperiam voluptate dolorem autem molestiae quibusdam est sint nulla fugiat nostrum, non, porro aliquid?
-    </p>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, corrupti? Veritatis itaque quidem excepturi asperiores impedit dolorum distinctio quos facere non, alias at laudantium! Perspiciatis sunt maxime inventore nam quae.
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum quisquam ad repellendus. Voluptas iste fugit minima rem aspernatur, corrupti esse tempora quis magni nulla incidunt accusantium ipsa nemo quaerat laborum?
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus iste provident officiis aut fuga perspiciatis velit eveniet temporibus accusamus, eius ullam in sed aperiam, delectus, animi eum ipsum necessitatibus incidunt.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus ipsa possimus labore deleniti expedita cum ipsum vero, accusamus sunt cumque consectetur nemo reiciendis. Ipsam, ipsum! Veniam, exercitationem? Perferendis, non recusandae.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat culpa cumque accusantium repellendus esse inventore neque, eligendi eaque voluptates similique quidem cupiditate consectetur maiores animi perspiciatis, maxime deserunt quo labore.
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro quibusdam aspernatur culpa? Vero officia fuga sapiente aperiam voluptate dolorem autem molestiae quibusdam est sint nulla fugiat nostrum, non, porro aliquid?
-    </p>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, corrupti? Veritatis itaque quidem excepturi asperiores impedit dolorum distinctio quos facere non, alias at laudantium! Perspiciatis sunt maxime inventore nam quae.
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum quisquam ad repellendus. Voluptas iste fugit minima rem aspernatur, corrupti esse tempora quis magni nulla incidunt accusantium ipsa nemo quaerat laborum?
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus iste provident officiis aut fuga perspiciatis velit eveniet temporibus accusamus, eius ullam in sed aperiam, delectus, animi eum ipsum necessitatibus incidunt.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus ipsa possimus labore deleniti expedita cum ipsum vero, accusamus sunt cumque consectetur nemo reiciendis. Ipsam, ipsum! Veniam, exercitationem? Perferendis, non recusandae.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat culpa cumque accusantium repellendus esse inventore neque, eligendi eaque voluptates similique quidem cupiditate consectetur maiores animi perspiciatis, maxime deserunt quo labore.
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro quibusdam aspernatur culpa? Vero officia fuga sapiente aperiam voluptate dolorem autem molestiae quibusdam est sint nulla fugiat nostrum, non, porro aliquid?
-    </p>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, corrupti? Veritatis itaque quidem excepturi asperiores impedit dolorum distinctio quos facere non, alias at laudantium! Perspiciatis sunt maxime inventore nam quae.
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum quisquam ad repellendus. Voluptas iste fugit minima rem aspernatur, corrupti esse tempora quis magni nulla incidunt accusantium ipsa nemo quaerat laborum?
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus iste provident officiis aut fuga perspiciatis velit eveniet temporibus accusamus, eius ullam in sed aperiam, delectus, animi eum ipsum necessitatibus incidunt.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus ipsa possimus labore deleniti expedita cum ipsum vero, accusamus sunt cumque consectetur nemo reiciendis. Ipsam, ipsum! Veniam, exercitationem? Perferendis, non recusandae.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat culpa cumque accusantium repellendus esse inventore neque, eligendi eaque voluptates similique quidem cupiditate consectetur maiores animi perspiciatis, maxime deserunt quo labore.
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro quibusdam aspernatur culpa? Vero officia fuga sapiente aperiam voluptate dolorem autem molestiae quibusdam est sint nulla fugiat nostrum, non, porro aliquid?
-    </p>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, corrupti? Veritatis itaque quidem excepturi asperiores impedit dolorum distinctio quos facere non, alias at laudantium! Perspiciatis sunt maxime inventore nam quae.
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum quisquam ad repellendus. Voluptas iste fugit minima rem aspernatur, corrupti esse tempora quis magni nulla incidunt accusantium ipsa nemo quaerat laborum?
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus iste provident officiis aut fuga perspiciatis velit eveniet temporibus accusamus, eius ullam in sed aperiam, delectus, animi eum ipsum necessitatibus incidunt.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus ipsa possimus labore deleniti expedita cum ipsum vero, accusamus sunt cumque consectetur nemo reiciendis. Ipsam, ipsum! Veniam, exercitationem? Perferendis, non recusandae.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat culpa cumque accusantium repellendus esse inventore neque, eligendi eaque voluptates similique quidem cupiditate consectetur maiores animi perspiciatis, maxime deserunt quo labore.
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro quibusdam aspernatur culpa? Vero officia fuga sapiente aperiam voluptate dolorem autem molestiae quibusdam est sint nulla fugiat nostrum, non, porro aliquid?
-    </p>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, corrupti? Veritatis itaque quidem excepturi asperiores impedit dolorum distinctio quos facere non, alias at laudantium! Perspiciatis sunt maxime inventore nam quae.
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum quisquam ad repellendus. Voluptas iste fugit minima rem aspernatur, corrupti esse tempora quis magni nulla incidunt accusantium ipsa nemo quaerat laborum?
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus iste provident officiis aut fuga perspiciatis velit eveniet temporibus accusamus, eius ullam in sed aperiam, delectus, animi eum ipsum necessitatibus incidunt.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus ipsa possimus labore deleniti expedita cum ipsum vero, accusamus sunt cumque consectetur nemo reiciendis. Ipsam, ipsum! Veniam, exercitationem? Perferendis, non recusandae.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat culpa cumque accusantium repellendus esse inventore neque, eligendi eaque voluptates similique quidem cupiditate consectetur maiores animi perspiciatis, maxime deserunt quo labore.
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro quibusdam aspernatur culpa? Vero officia fuga sapiente aperiam voluptate dolorem autem molestiae quibusdam est sint nulla fugiat nostrum, non, porro aliquid?
-    </p>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, corrupti? Veritatis itaque quidem excepturi asperiores impedit dolorum distinctio quos facere non, alias at laudantium! Perspiciatis sunt maxime inventore nam quae.
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum quisquam ad repellendus. Voluptas iste fugit minima rem aspernatur, corrupti esse tempora quis magni nulla incidunt accusantium ipsa nemo quaerat laborum?
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus iste provident officiis aut fuga perspiciatis velit eveniet temporibus accusamus, eius ullam in sed aperiam, delectus, animi eum ipsum necessitatibus incidunt.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus ipsa possimus labore deleniti expedita cum ipsum vero, accusamus sunt cumque consectetur nemo reiciendis. Ipsam, ipsum! Veniam, exercitationem? Perferendis, non recusandae.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat culpa cumque accusantium repellendus esse inventore neque, eligendi eaque voluptates similique quidem cupiditate consectetur maiores animi perspiciatis, maxime deserunt quo labore.
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro quibusdam aspernatur culpa? Vero officia fuga sapiente aperiam voluptate dolorem autem molestiae quibusdam est sint nulla fugiat nostrum, non, porro aliquid?
-    </p>
+<div class="container-fluid my-4 px-3">
+    <h4 class="mt-4 mb-3 text-dark text-center">Najprodavaniji proizvodi</h4>
+
+
+    <div id="carousel-best-sold" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner row w-100 mx-auto" role="listbox">
+            <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3" *ngFor="let product of products;index as i"
+                [ngClass]="{'active': i === 0}">
+                <app-product [categoryName]="categoryName" [product]="product" [subCategoryName]="product.subCategory.subCategoryName">
+               </app-product>
+            </div>
+        </div>
+        <a class="carousel-control-prev" id="left" href="#carousel-best-sold" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" id="right" href="#carousel-best-sold" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+
 </div>
