--- a/WebShop-Front/src/app/shared/footer/footer.component.html
+++ b/WebShop-Front/src/app/shared/footer/footer.component.html
@@ -1,3 +1,3 @@
-<div class="footer mt-5 bg-logo text-light text-center p-4">
+<div class="d-block mt-5 bg-logo text-light text-center p-4">
     &copy; Diplomski rad - Milovan Srejić - {{year}}
 </div>
