Mala izmena na pocetnoj strani

--- a/WebShop-Front/src/app/pages/home-page/home-page.component.html
+++ b/WebShop-Front/src/app/pages/home-page/home-page.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid my-4 px-3">
-    <h4 class="mt-4 mb-3 text-dark text-center">Najprodavaniji proizvodi</h4>
+    <h4 class="my-4 text-dark text-center">Najprodavaniji proizvodi</h4>
 
 
     <div id="carousel-best-sold" class="carousel slide" data-ride="carousel">
