--- a/WebShop-Front/src/app/pages/home-page/home-page.component.css
+++ b/WebShop-Front/src/app/pages/home-page/home-page.component.css
@@ -129,7 +129,7 @@
 #left, #right {
     width: 50px !important;
     height: 50px !important;
-    background-color: #868e96 !important;
+    background-color: #cc2036 !important;
     border-radius: 50%;
     margin-top: auto;
     margin-bottom: auto;
