--- a/WebShop-Front/src/app/shared/navbar/navbar.component.css
+++ b/WebShop-Front/src/app/shared/navbar/navbar.component.css
@@ -6,21 +6,57 @@
     box-shadow: 0px 5px 10px #cc2036;
 }
 
-.navbar-nav .nav-item .nav-link {
-    border-bottom: none;
-    border-top: none;
+.nav-link {
+    border: none;
+    position: relative;
+}
+.nav-link:hover {
+    color: #f8f9fa !important;   
 }
 
 @media only screen and (min-width: 768px) {
-    .navbar-nav .nav-item .nav-link {
-        border-bottom: 1.5px solid #0741AD !important;
-        border-top: 1.5px solid #0741AD !important;
+    .nav-link, .nav-link:hover {
+        border: none;
     }
-
-    .navbar-nav .nav-item .nav-link:hover {
-        border-bottom: 1.5px solid #cc2036 !important;
-        color: #f8f9fa !important;
-    }
-
+    .nav-link::after{
+        content: '';
+        position: absolute;
+        width: 0px;
+        height: 2.5px;
+        left: 50%;
+        bottom:0;
+        background-color: #cc2036 !important;
+        transition: all ease-in-out .2s;
+      }
+      .nav-link:hover::after{
+        width: 100%;
+        left: 0;
+      }
 }
+
+
+/* li.different{
+    border:none;
+    
+  }
+  li.different:hover{
+    border: none;
+  }
+  li:hover {
+    border-bottom: 5px solid #FFFFFF;
+  }
+  .different::after{
+    content: '';
+    position: absolute;
+    width: 0px;
+    height: 5px;
+    left: 50%;
+    bottom:0;
+    background-color: white;
+    transition: all ease-in-out .2s;
+  }
+  .different:hover::after{
+    width: 100%;
+    left: 0;
+  } */
 
